--- a/detailed-info.css
+++ b/detailed-info.css
@@ -1,7 +1,7 @@
 .listing-image {
-    width: 800px;
+    width: 100%;
     height: 500px;
-    object-fit: cover; /* Opcionális: a képarány megtartása és a kép kicenterezése */
+    object-fit: cover;
 }
 
 #overlay {
@@ -77,7 +77,7 @@
 }
 
 #listing-details td, #listing-details th {
-    width: 300px;
+    width: 450px;
 }
 
 #listing-details td {
@@ -91,7 +91,7 @@
 }
 
 p {
-    max-width: 800px;
-    margin: 0 auto; /* középre igazítás */
+    max-width: 1200px;
+    margin: 0 auto; 
     font-size: 20px;
 }
