--- a/style.css
+++ b/style.css
@@ -16,20 +16,17 @@ h3{
     margin-right: 110px;
 }
 
-/* Általános lábléc stílusok */
 footer {
     width: 100%;
     margin-top: 3%;
 }
 
-/* Tartalom középre igazítása a láblécben */
 footer .container {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-/* Link stílus a láblécben */
 footer a {
     color: white;
     text-decoration: none;
@@ -66,7 +63,6 @@ li{
     height: 200px;
     background-color: rgba(255, 255, 255, 80%);
     border-radius: 10px;
-    /*opacity: 80%;*/
 }
 
 input{
@@ -103,6 +99,15 @@ button{
     margin: 0 5px;
 }
 
+#registerPopup {
+    z-index: 1000;
+    opacity: 1;
+}
+
+#registerPopup button {
+    z-index: 1100;
+}
+
 .formBackground form{
     display: flex;
     align-items: center;
@@ -127,16 +132,16 @@ button{
     display: flex;
     align-items: center;
     width: 100%;
-    flex-direction: column; /* A sorok tartalmát oszlopba rendezzük kisebb képernyőn */
+    flex-direction: column; 
 }
 
 .row label {
-    margin-bottom: 5px; /* Távolság a címkék és az input mezők között */
+    margin-bottom: 5px;
 }
 
 .row input,
 .row select {
-    margin-bottom: 10px; /* Távolság az input mezők között */
+    margin-bottom: 10px;
 }
 
 .button-row {
@@ -163,13 +168,12 @@ button[type="submit"]:hover {
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    /*max-width: 1200px;*/
 }
 
 .flex-container > div {
     margin: 2px;
     padding: 2px;
-    font-size: 10px; /* Alapértelmezett kisebb méret */
+    font-size: 10px;
 }
 
 .listings-container {
@@ -330,7 +334,7 @@ p{
 
 .container {
     width: 100%;
-    max-width: 1800px; /* Példaérték, változtatható az oldal szélességének megfelelően */
+    max-width: 1800px; 
     margin: 0 auto;
     padding: 0 20px;
     box-sizing: border-box;
