--- a/style.css
+++ b/style.css
@@ -56,13 +56,16 @@ li{
     justify-content: center;
 }
 
-.formBackground{
+.formBackground {
     width: 90%;
     display: flex;
-    flex-direction: column;
-    height: 200px;
+    flex-direction: column; /* Elemeinek egymás alá rendezése */
+    height: auto; /* Állítsuk az automatikus magasságra */
     background-color: rgba(255, 255, 255, 80%);
     border-radius: 10px;
+    margin: 0 auto; /* Középre igazítás */
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 input{
@@ -132,7 +135,8 @@ button{
     display: flex;
     align-items: center;
     width: 100%;
-    flex-direction: column; 
+    flex-direction: column; /* A belső elemek egymás alá rendezése */
+    margin-bottom: 10px; /* Kisebb távolság az elemek között */
 }
 
 .row label {
@@ -277,9 +281,26 @@ h2{
         width: 50%;
     }
     .formBackground {
-        width: 90%;
+        width: auto; /* Automatikus szélesség beállítása */
+        margin: 0 auto; /* Középre igazítás */
+        padding: 10px; /* Kisebb padding a form körül */
+        display: flex; /* Flexbox elrendezés használata */
+        flex-direction: column; /* Oszlopba rendezés */
     }
-    .flex-container {
+    .row {
+        width: 100%; /* Teljes szélesség beállítása */
+        margin-bottom: 5px; /* Kisebb távolság az elemek között */
+    }
+    .row label {
+        margin-right: 0; /* Az elemek közötti távolság nullázása */
+        margin-bottom: 5px; /* Kisebb távolság a címkék és az input mezők között */
+    }
+    .row input,
+    .row select {
+        width: calc(100% - 20px); /* Az input mezők teljes szélesség beállítása a margin figyelembevételével */
+        margin-right: 0; /* Az elemek közötti távolság nullázása */
+    }
+    .flex-container{
         flex-direction: column;
     }
 }
@@ -291,7 +312,7 @@ h2{
     .formBackground {
         width: 90%;
     }
-    .flex-container {
+    .flex-container{
         flex-direction: column;
     }
 }
